package promotionengine.promotions;
import promotionengine.*;

public interface PromotionStrategy {
    void applyPromotion(Product product);
}
